--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -39,10 +40,12 @@
             animation: {
               "fade-in": "fadeIn 0.3s ease-out",
               "slide-up": "slideUp 0.4s ease-out",
+              "scale-in": "scaleIn 0.2s ease-out",
             },
             keyframes: {
               fadeIn: { "0%": { opacity: "0" }, "100%": { opacity: "1" } },
               slideUp: { "0%": { transform: "translateY(10px)", opacity: "0" }, "100%": { transform: "translateY(0)", opacity: "1" } },
+              scaleIn: { "0%": { transform: "scale(0.95)", opacity: "0" }, "100%": { transform: "scale(1)", opacity: "1" } },
             },
           },
         },
@@ -80,6 +83,63 @@
       
       body { -webkit-tap-highlight-color: transparent; }
       .pb-safe { padding-bottom: env(safe-area-inset-bottom); }
+
+      /* CMDK Styles */
+      [cmdk-root] {
+        width: 100%;
+        max-width: 640px;
+        background: white;
+        border-radius: 1.5rem;
+        overflow: hidden;
+        box-shadow: var(--tw-shadow-2xl);
+        border: 1px solid rgba(0,0,0,0.05);
+      }
+      .dark [cmdk-root] {
+        background: #111827;
+        border: 1px solid rgba(255,255,255,0.1);
+      }
+      [cmdk-input] {
+        width: 100%;
+        border: none;
+        padding: 1.25rem 1rem;
+        font-size: 1rem;
+        outline: none;
+        background: transparent;
+      }
+      [cmdk-item] {
+        content-visibility: auto;
+        cursor: pointer;
+        height: auto;
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        padding: 12px 16px;
+        user-select: none;
+        will-change: background, color;
+        transition: all 150ms ease;
+      }
+      [cmdk-item][aria-selected='true'] {
+        background: rgba(13, 148, 136, 0.08);
+      }
+      .dark [cmdk-item][aria-selected='true'] {
+        background: rgba(13, 148, 136, 0.15);
+      }
+      [cmdk-group-heading] {
+        user-select: none;
+        font-size: 11px;
+        font-weight: 800;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        color: #94a3b8;
+        padding: 16px 16px 8px;
+      }
+      [cmdk-list] {
+        max-height: 450px;
+        overflow-y: auto;
+        padding-bottom: 12px;
+        scroll-padding-block-start: 8px;
+        scroll-padding-block-end: 8px;
+      }
     </style>
     <script type="importmap">
 {
@@ -91,11 +151,12 @@
     "react-router-dom": "https://esm.sh/react-router-dom@6.22.3?deps=react@18.2.0",
     "zustand": "https://esm.sh/zustand@4.5.2?deps=react@18.2.0",
     "zustand/middleware": "https://esm.sh/zustand@4.5.2/middleware?deps=react@18.2.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "cmdk": "https://esm.sh/cmdk@1.0.0?deps=react@18.2.0,react-dom@18.2.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.1",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "zustand/": "https://esm.sh/zustand@^5.0.9/",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "zustand/": "https://esm.sh/zustand@^5.0.10/"
   }
 }
 </script>
